Fix `profile-recent-preview` spacing

--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -418,10 +418,9 @@
     padding-bottom: 10px;
 }
 
-#profile-recent-preview tr {
-    display: block;
-    padding-left: 5px;
-    padding-bottom: 4px;
+#profile-recent-preview table {
+    border-collapse: separate;
+    border-spacing: 2px 3px;
 }
 
 #leader h2 {
